need to fix z-index

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,12 +3,12 @@ $btnColor: #6B69F9;
 $titleColor: #FFFFFF;
 $subtitleColor: #ffffff50;
 $cartColor: rgba(255, 255, 255, 0.06);
-$borderColor: #D8D8D8;
+$borderColor: rgba(255, 255, 255, 0.04);
+;
 $energyColor: #FF4738;
 $green: #24CB8D;
 
 body {
-    height: 1500px;
     font-family: Jost;
     padding: 0;
     color: white;
@@ -24,7 +24,6 @@ body {
 
 .menu {
     background: rgba(156, 165, 236, 0.04);
-
     width: 280px;
     display: flex;
     flex-direction: column;
@@ -33,11 +32,10 @@ body {
     position: fixed;
 
     &__header {
-
         height: 72px;
         display: flex;
         align-items: center;
-        border-bottom: 1px solid #000;
+        border-bottom: 1px solid $borderColor
     }
 
     &__img {
@@ -48,7 +46,7 @@ body {
     &__select {
         padding-top: 30px; ////
         font-size: 14px;
-        border-bottom: 1px solid #000;
+        border-bottom: 1px solid $borderColor
     }
 
     &__wrapper {
@@ -103,7 +101,7 @@ body {
         cursor: pointer;
 
         &:hover {
-            background-color: rgba(111, 110, 255, 0.06);
+            background-color: $borderColor;
             border-left: 3px solid #6F6EFF;
 
             .img-svg path,
@@ -124,7 +122,7 @@ body {
 
     .img-svg path,
     .img-svg {
-        fill: black;
+        fill: rgba(255, 255, 255, 0.5);
         opacity: 1;
     }
 
@@ -152,8 +150,6 @@ body {
     &_padding {
         position: fixed;
         margin-left: 280px;
-        // background-color: $primaryColor;
-
         padding-top: 14px;
         padding-bottom: 13px;
     }
@@ -165,7 +161,8 @@ body {
         justify-content: space-between;
         display: flex;
         align-items: center;
-        border-bottom: 1px solid #000;
+        border-bottom: 1px solid $borderColor;
+        z-index: 10000;
     }
 
     &__settings {
@@ -177,7 +174,9 @@ body {
         font-size: 14px;
     }
 
-    &__setting {}
+    &__setting {
+        cursor: pointer;
+    }
 
     &__wrapper-container {
         width: 504px;
@@ -307,32 +306,70 @@ body {
 .course {
     margin-top: 112px;
     margin-left: 335px;
-
-    // width: 1052px;
-
+    &__ul{
+    }
     &__header {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     &__lectures {
         display: flex;
     }
-    
-    &__li {}
-    &__info{
+
+    &__li {
+        margin-bottom: 60px;
+    }
+
+    &__info {
         text-transform: uppercase;
         margin-bottom: 25px;
     }
-    &__level{
+
+    &__level {
         margin-bottom: 7px;
         font-size: 11px;
         line-height: 16px;
         opacity: 0.5;
     }
-    &__discipline{
+
+    &__discipline {
         font-size: 22px;
         line-height: 18px;
+    }
+
+    &__lectures {
+        height: 30px;
+        display: flex;
+        align-items: center;
+        width: 160px;
+        justify-content: space-between;
+    }
+
+    &__button {
+        width: 86px;
+        height: 100%;
+    }
+
+    &__arrows {
+        display: flex;
+        align-items: center;
+        width: 65px;
+
+        justify-content: space-between;
+    }
+
+    &__arrow {
+        border: 1px solid rgba(255, 255, 255, 0.15);
+        border-radius: 4px;
+        display: flex;
+        cursor: pointer;
+
+        .arrow {
+            margin: 10px 10px;
+            // margin: 10px;
+        }
     }
 }
 
@@ -340,22 +377,94 @@ body {
     max-width: 1052px;
     margin: 0 auto;
     overflow: hidden;
-    
+
     &-slide {
         padding: 0 3px;
     }
-    
+
     &-list {
         margin-left: -30px;
         margin-right: -30px;
     }
-    
-    &-item {
-        border: 1px solid black;
-        height: 294px;
-        width: 255px !important;
+
+    &__block {
         display: flex;
-        font-display: column;
-        justify-content: space-around;
+        flex-direction: column;
+        height: 294px;
+    }
+
+    &__img {
+        position: relative;
+        text-align: center;
+
+        img {
+            width: 100%;
+            border-top-left-radius: 6px;
+            border-top-right-radius: 6px;
+        }
+    }
+
+    &-item {
+        border-radius: 6px;
+        background: $borderColor;
+        width: 255px !important;
+    }
+
+    &__title {
+        margin-bottom: 5px;
+    }
+
+    &__subtitle {
+        line-height: 18px;
+        width: 215px;
+
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+
+    &__wrapper {
+        height: 88px;
+        border-bottom: 1px solid $borderColor
+    }
+
+    &__footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &_padding-text {
+        padding: 15px;
+    }
+
+    &__button {
+        background-color: rgba(107, 105, 249, 1);
+        border-radius: 4px;
+        border: 0px;
+        color: white;
+    }
+
+    &_button-watch-padding {
+        padding: 8px 18px;
+    }
+
+    &_button-text-style {
+        font-size: 12px;
+        line-height: 10px;
+    }
+
+    &_button-lecture-padding {
+        padding: 5px;
+    }
+
+    &_button-pos {
+        position: absolute;
+        top: 15px;
+        left: 15px;
     }
 }
