--- a/src/styles/sub-menu.scss
+++ b/src/styles/sub-menu.scss
@@ -8,6 +8,14 @@
     transform: rotate(-45deg);
 }
 
+.arrow-left {
+    transform: rotate(-135deg);
+}
+
+.arrow-right {
+    transform: rotate(45deg);
+}
+
 .arrow {
     width: 7px;
     height: 7px;
